# tradscape

./: .gitignore  README.md  cert_hash.txt  index.html  main.js  map-editor.html  map.json  net.js  package-lock.json  package.json  probe.mjs  slice.mjs  style.css  tradscape_backup.sh
.claude/: settings.local.json
server/: Cargo.toml  build.rs  install_rclone_ssh.sh  tradscape.sqlite3  tradscape_deploy.sh  tradscape_logs.sh  tradscape_setup.sh
server/src/: defs.rs  main.rs  map.rs  sim.rs  transport.rs  types.rs  wire.rs
