[package]
name = "tradscape-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
rusqlite = { version = "0.39.0", features = ["bundled"] }
uuid = { version = "1.23.1", features = ["v4"] }

[profile.dev]
opt-level = 1
