[package]
name = "tradscape-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tower-http = { version = "0.5", features = ["fs"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.39.0", features = ["bundled"] }
uuid = { version = "1.23.1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
wtransport = "0.6"
sha2 = "0.10"
hex = "0.4"
anyhow = "1"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
opt-level = 1
